# metal-ligand-builder

./: .gitignore  DEBUG_LOGGING.md  LICENSE  NEW_ARCHITECTURE.md  README.md  pyproject.toml  pytest.ini
examples/co_edta/: co_edta_analysis.py
examples/co_edta/co_edta_binding_analysis/: README.md
examples/co_edta/co_edta_binding_analysis/02_optimized_structures/: optimization_workflow_summary.json
examples/co_edta/co_edta_binding_analysis/03_orca_inputs/: orca_generation_summary.json
examples/co_edta/co_edta_binding_analysis/04_reports/: analysis_data.json  analysis_report.html  complexes_results.csv  complexes_summary.csv  complexes_top10.csv  ligands_results.csv  ligands_summary.csv  metals_results.csv  metals_summary.csv
examples/co_edta/co_edta_binding_analysis/06_metadata_files/: binding_sites_metadata.json  complex_generation_metadata.json  ligand_generation_metadata.json  metal_generation_metadata.json  results_archive.json  structure_generation_summary.json  workflow_summary.json  xtb_optimization_metadata.json
examples/na_methionine/: na_methionine_analysis.py
experiments/co_citric_acid/: co_citric_acid_analysis.py
experiments/co_edta/: co_edta_analysis.py
experiments/co_iminodiacetic_acid/: co_iminodiacetic_acid_analysis.py
experiments/co_nitrilotriacetic_acid/: co_nitrilotriacetic_acid_analysis.py
experiments/na_methionine/: na_methionine_analysis.py
experiments/ni_citric_acid/: ni_citric_acid_analysis.py
experiments/ni_edta/: ni_edta_analysis.py
experiments/ni_iminodiacetic_acid/: ni_iminodiacetic_acid_analysis.py
experiments/ni_nitrilotriacetic_acid/: ni_nitrilotriacetic_acid_analysis.py
integration_test/01_initial_structures/ligands/water_workdir/: conf1  molecule.sdf
integration_test/06_metadata_files/: metal_generation_metadata.json  structure_generation_summary.json
ml_xtb_prescreening/: __init__.py
ml_xtb_prescreening/analysis/: __init__.py  energy_analyzer.py  ligand_validator.py  report_generator.py  structure_validator.py
ml_xtb_prescreening/core/: __init__.py  complex.py  config.py  data_models.py  logger.py
ml_xtb_prescreening/generators/: __init__.py  binding_site_detector.py  enhanced_pose_generator.py  metal_generator.py  pose_generator.py
ml_xtb_prescreening/io/: __init__.py  file_handler.py  orca_generator.py  orca_writer.py
ml_xtb_prescreening/optimizers/: __init__.py  conformer_generator.py  xtb_optimizer.py  xtb_workflow.py
test_opt/01_initial_structures/ligands/water_workdir/: conf1  conformers.sdf
test_opt/02_optimized_structures/: optimization_workflow_summary.json
test_opt/02_optimized_structures/metals/: metals_optimization_summary.json
test_opt/02_optimized_structures/metals/Li_ion/: charges  xtb.err  xtbrestart
test_opt/06_metadata_files/: metal_generation_metadata.json  structure_generation_summary.json  xtb_optimization_metadata.json
test_orca/03_orca_inputs/: orca_generation_summary.json
test_structure_gen/01_initial_structures/ligands/glycine_workdir/: conf1  conf2  conf3  conformers.sdf  molecule.sdf
test_structure_gen/06_metadata_files/: metal_generation_metadata.json  structure_generation_summary.json
tests/: __init__.py  conftest.py  test_file_handling.py  test_metal_ligand_complex.py  test_orca_generation.py  test_structure_generation.py  test_xtb_optimization.py
(+188 files in other folders)
